--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -42,13 +42,13 @@
     "blankEmail": "Email cannot be blank.",
     "emailIsInvalid": "Email format is invalid.",
     "changePassword": "Change your password.",
-    "passwordNotMatch": "New password and password \n confirmation does not match.",
+    "passwordNotMatch": "New password and password confirmation does not match.",
     "pleaseInputAllValue": "Please input all Field.",
     "editProfileSuccess": "Edit Profile Successfully",
     "editProfileFailed": "Edit Profile Failed.",
     "passwordLessThanSix": "Password must be at least 6 characters.",
     "passwordSameAsOld": "New password cannot be same as old password.",
-    "EmailOrPasswordMismatch": "Invalid Email or Password.",
+    "EmailOrPasswordMismatch": "Email or Password is Invalid.",
     "MismatchOldPassword": "Old password is Invalid.",
     "emailCannotBeBlank": "Email cannot be blank.",
     "emailHasAlreadyBeenTaken": "Email has already been taken.",
