--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -29,7 +29,8 @@
     "changePassword": "Your Email",
     "oldPassword": "Old Password",
     "newPassword": "New Password",
-    "newPasswordConfirmation": "New Password Confirmation"
+    "newPasswordConfirmation": "New Password Confirmation",
+    "name": "Name"
   },
   "message": {
     "appName": "Family Plan",
