--- a/src/translations/th.json
+++ b/src/translations/th.json
@@ -29,7 +29,8 @@
     "changePassword": "อีเมลของคุณ",
     "oldPassword": "รหัสผ่านเก่า",
     "newPassword": "รหัสผ่านใหม่",
-    "newPasswordConfirmation": "ยืนยันรหัสผ่านใหม่"
+    "newPasswordConfirmation": "ยืนยันรหัสผ่านใหม่",
+    "name": "ชื่อ"
   },
   "message": {
     "appName": "Family Plan",
