--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -11,7 +11,8 @@
     "save": "Save",
     "signinWith": "Sign in With",
     "forgotPassword": "Forgot password",
-    "resetPassword": "Reset password"
+    "resetPassword": "Reset password",
+    "editProfile": "Edit profile"
   },
   "text": {
     "mr": "Mr",
@@ -30,11 +31,21 @@
     "oldPassword": "Old Password",
     "newPassword": "New Password",
     "newPasswordConfirmation": "New Password Confirmation",
-    "name": "Name"
+    "name": "Name",
+    "th": "TH",
+    "appVersion": "Versions"
   },
   "message": {
     "appName": "Family Plan",
     "profile": "Profile",
+    "home": "Home",
+    "chat": "Chat",
+    "notifications": "Notifications",
+    "newGroup": "New Group",
+    "qrCode": "QR Code",
+    "members": "Members",
+    "search": "Search",
+    "loading": "Loading",
     "forgotPassword": "Forgot password",
     "success": "Success",
     "signInSuccessful": "Sign in successful",
