--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -10,7 +10,7 @@
     "ok": "OK",
     "save": "Save",
     "signinWith": "Sign in With",
-    "forgotPassword": "Forgot password",
+    "forgotPassword": "Forgot your password ?",
     "resetPassword": "Reset password",
     "editProfile": "Edit profile"
   },
