[Added] list group

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -49,7 +49,12 @@
     "search": "Search",
     "loading": "Loading",
     "service": "Service",
-    "chooseService": "Choose Service"
+    "chooseService": "Choose Service",
+    "my": "My",
+    "group": "Group",
+    "public": "Public",
+    "myGroup": "My\nGroup",
+    "publicGroup": "Public\nGroup"
   },
   "message": {
     "forgotPassword": "Forgot password",
