--- a/src/translations/th.json
+++ b/src/translations/th.json
@@ -46,14 +46,14 @@
     "search": "ค้นหา",
     "loading": "กำลังโหลด",
     "service": "บริการ",
-    "forgotPassword": "ลืมรหัสผ่าน",
     "chooseService": "เลือกบริการ",
     "my": "ฉัน",
     "group": "กลุ่ม",
     "public": "สาธารณะ",
     "myGroup": "กลุ่ม\nของฉัน",
     "publicGroup": "กลุ่ม\nสาธารณะ",
-    "joinGroup": "เข้าร่วมกลุ่ม"
+    "joinGroup": "เข้าร่วมกลุ่ม",
+    "forgotPassword": "ลืมรหัสผ่าน"
   },
   "message": {
     "success": "สำเร็จ",
