--- a/src/translations/th.json
+++ b/src/translations/th.json
@@ -13,7 +13,8 @@
     "forgotPassword": "ลืมรหัสผ่าน ?",
     "resetPassword": "รีเซ็ตรหัสผ่าน",
     "editProfile": "แก้ไขโปรไฟล์",
-    "joinGroup": "เข้าร่วมกลุ่ม"
+    "joinGroup": "เข้าร่วมกลุ่ม",
+    "invite": "ส่งคำเชิญ"
   },
   "text": {
     "mr": "นาย",
@@ -53,7 +54,9 @@
     "myGroup": "กลุ่ม\nของฉัน",
     "publicGroup": "กลุ่ม\nสาธารณะ",
     "joinGroup": "เข้าร่วมกลุ่ม",
-    "forgotPassword": "ลืมรหัสผ่าน"
+    "forgotPassword": "ลืมรหัสผ่าน",
+    "inviteMember": "เชิญสมาชิก",
+    "setUpAReminder": "ตั้งค่าเตือนความจำ"
   },
   "message": {
     "success": "สำเร็จ",
@@ -87,6 +90,7 @@
     "signOutFail": "ออกจากระบบล้มเหลว",
     "signOutSuccessful": "ออกจากระบบสำเร็จ",
     "createGroupSuccessful": "สร้างกลุ่มสำเร็จ",
-    "joinGroupSuccessful": "เข้าร่วมกลุ่มสำเร็จ"
+    "joinGroupSuccessful": "เข้าร่วมกลุ่มสำเร็จ",
+    "inviteMemberSuccessful": "ส่งคำเชิญเข้าร่วมกลุ่มสำเร็จ"
   }
 }
