--- a/src/translations/th.json
+++ b/src/translations/th.json
@@ -65,7 +65,8 @@
     "settingServiceCharge": "ตั้งค่าบริการ",
     "serviceCharge": "ค่าบริการ",
     "clickNewGroup": "คลิกเพื่อสร้างกลุ่ม",
-    "leaveGroup": "ออกจากกลุ่ม"
+    "leaveGroup": "ออกจากกลุ่ม",
+    "darkMode": "โหมดมืด"
   },
   "message": {
     "success": "สำเร็จ",
