--- a/src/translations/th.json
+++ b/src/translations/th.json
@@ -106,12 +106,14 @@
     "settingDueDateSuccessful": "ตั้งค่าวันที่ครบกำหนดสำเร็จ",
     "removeMemberSuccessful": "ลบสมาชิกที่เลือกสำเร็จ",
     "nameHasAlreadyBeenTaken": "ชื่อนี้ซ้ำกับที่มีอยู่แล้ว",
-    "alreadyInTheGroup": "คุณได้อยู่ในกลุ่มนี้แล้ว",
+    "alreadyInTheGroup": "คุณ %{name} ได้อยู่ในกลุ่มนี้แล้ว",
     "leaveGroupSuccessful": "คุณได้ออกจากกลุ่มเรียบร้อยแล้ว",
     "theGroupIsFull": "กลุ่มเต็มแล้ว",
     "somethingWentWrong": "มีข้อผิดพลาดเกิดขึ้น",
     "notFound": "ไม่พบ",
     "notFoundUser": "ไม่พบผู้ใช้ที่ค้นหา โปรดลองใหม่อีกครั้ง",
-    "requestGroupSuccessful": "ส่งคำขอเข้าร่วมกลุ่มสำเร็จ"
+    "requestGroupSuccessful": "ส่งคำขอเข้าร่วมกลุ่มสำเร็จ",
+    "removeChatSuccessful": "ลบแชทสำเร็จ",
+    "removeNotiSuccessful": "ลบแจ้งเตือนสำเร็จ"
   }
 }
