--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -111,12 +111,14 @@
     "settingDueDateSuccessful": "Setting due date successful",
     "removeMemberSuccessful": "Remove member successful",
     "nameHasAlreadyBeenTaken": "Name has already been taken",
-    "alreadyInTheGroup": "You are already in the group",
+    "alreadyInTheGroup": "%{name} are already in the group",
     "leaveGroupSuccessful": "Leave group successful",
     "theGroupIsFull": "The group is full",
     "somethingWentWrong": "Something went wrong",
     "notFound": "Not found",
     "notFoundUser": "The user searched for was not found. Please try again",
-    "requestGroupSuccessful": "Request group successful"
+    "requestGroupSuccessful": "Request group successful",
+    "removeChatSuccessful": "Remove chat successful",
+    "removeNotiSuccessful": "Remove notification successful"
   }
 }
