--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -126,9 +126,10 @@
     "requestGroupSuccessful": "Request group successful",
     "removeChatSuccessful": "Remove chat successful",
     "removeNotiSuccessful": "Remove notification successful",
-    "copyUserNameSuccessful": "Copy username successful",
+    "copyUsernameSuccessful": "Copy username successful",
     "copyPasswordSuccessful": "Copy password successful",
     "authenticateFailed": "Authenticate failed",
-    "requestToOpenUsernamePasswordGroup": "Request to open username password group %{name}"
+    "requestToOpenUsernamePasswordGroup": "Request to open username password group %{name}",
+    "settingUsernamePasswordSuccessful": "Updated username password successful"
   }
 }
